--- a/index.html
+++ b/index.html
@@ -1,16 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- BootStrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- MyStyle -->
     <link rel="stylesheet" href="style.css">
-    <title>Phone Hunter</title>
+    <title>Phone Mart Bd</title>
 </head>
+
 <body>
-    
+    <header>
+        <h1 class="text-center text-warning">Phone Mart BD</h1>
+
+        <div class="input-group mb-3 w-50 mx-auto">
+            <input id="search-field" type="text" class="form-control" placeholder="Your Favorite Phone">
+
+            <button onclick="searchPhone()" class="btn text-dark bg-warning fw-bold" type="button"
+                id="button-search">Search</button>
+        </div>
+        <hr>
+    </header>
+    <!-- Names: TODO: iphone, samsung, huawei, oppo, redmi,.data.length
+    slug:apple_iphone_13_pro_max-11089 -->
+
+    <!-- Display Phones -->
+    <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4 w-75 mx-auto">
+       
+    </div>
+
 
 
     <script src="./index.js"></script>
 </body>
+
 </html>
