single phone details added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
     <!-- Names: TODO: iphone, samsung, huawei, oppo, redmi,.data.length
     slug:apple_iphone_13_pro_max-11089 -->
 
+    <!-- Display single Phone Details -->
+        <div id="phone-details" class="row row-cols-1 row-cols-md-4 g-4 w-75 mx-auto">
+
+            <p class="bg-info">This is it</p>
+
+        </div>
+
+
+
+
     <!-- Display Phones -->
     <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4 w-75 mx-auto">
        
