search validation done

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
             <input id="search-field" type="text" class="form-control" placeholder="Your Favorite Phone">
 
             <button onclick="searchPhone()" class="btn text-dark bg-warning fw-bold" type="button"
-                id="button-search">Search</button>
+                id="button-search">Search</button>               
         </div>
+        <p id="search-error">Phone names can't be Number or empty</p> 
         <hr>
     </header>
     <!-- Names: TODO: iphone, samsung, huawei, oppo, redmi,.data.length
