--- a/index.html
+++ b/index.html
@@ -22,25 +22,25 @@
             <input id="search-field" type="text" class="form-control" placeholder="Your Favorite Phone">
 
             <button onclick="searchPhone()" class="btn text-dark bg-warning fw-bold" type="button"
-                id="button-search">Search</button>               
+                id="button-search">Search</button>
         </div>
-        <p id="search-error">Phone names can't be Number or empty</p> 
+
+        <p id="search-error">Phone names can't be Number or empty</p>
+        <p id="wrong-input-error">The text u entered is not available in our database</p>
+
         <hr>
     </header>
     <!-- Names: TODO: iphone, samsung, huawei, oppo, redmi,.data.length
     slug:apple_iphone_13_pro_max-11089 -->
 
     <!-- Display single Phone Details -->
-        <div id="phone-details" class="row row-cols-1 row-cols-md-4 g-4 w-75 mx-auto">
+    <div id="phone-details" class="row row-cols-1 row-cols-md-4 g-4 w-75 mx-auto">
 
-        </div>
-
-
-
+    </div>
 
     <!-- Display Phones -->
     <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4 w-75 mx-auto">
-       
+
     </div>
 
 
