--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     slug:apple_iphone_13_pro_max-11089 -->
 
     <!-- Display single Phone Details -->
-    <div id="phone-details" class="row row-cols-1 row-cols-md-4 g-4 w-75 mx-auto">
+    <div id="phone-details" class="row row-cols-1 row-cols-md-4 g-4 w-75 mx-auto mb-3">
 
     </div>
 
